# MegaManX

./: .gitignore  CMakeLists.txt  vcpkg.json
MegaManX/: .gitignore
MegaManX/assets/maps/: RedTileSet.tsx
MegaManX/include/: Background.h  CoinSystem.h  Collision.h  Combat.h  Draw.h  Enemy.h  PlayerMovement.h
MegaManX/src/: Camera.cpp  Draw.cpp  Enemy.cpp  GameInit.cpp  TileMap.cpp  UpdateAnimation.cpp  main.cpp
assets/maps/: Map.tmx
include/: Background.h  Camera.h  CheckPointSystem.h  CoinSystem.h  Collision.h  Combat.h  Draw.h  Enemy.h  GameInit.h  MainMenu.h  Player.h  PlayerMovement.h  PlayerPhysics.h  TileMap.h  UpdateAnimation.h
src/: Camera.cpp  CheckPointSystem.cpp  CoinSystem.cpp  Collision.cpp  Combat.cpp  Draw.cpp  Enemy.cpp  GameInit.cpp  MainMenu.cpp  PlayerMovement.cpp  PlayerPhysics.cpp  TileMap.cpp  UpdateAnimation.cpp  main.cpp
